# safe-exec

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yaml  lint.yaml  release.yaml  test.yaml
src/safe_exec/: __init__.py  __main__.py  safe_exec.pth
tests/: test_allow.py  test_allowed_callers.py  test_trusted_callers.py
tests/scripts/: script1.py
