[project]
name = "safe-exec"
dynamic = ["version"]
description = "Deobfuscate and inspect code passed into exec() and eval()"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "Lemonyte", email = "contact@lemonyte.com" }]
requires-python = ">=3.9"
dependencies = ["typing-extensions>=4.0.0;python_version<'3.10'"]

[project.urls]
Repository = "https://github.com/lemonyte/safe-exec"

[project.scripts]
safe-exec = "safe_exec.__main__:main"

[dependency-groups]
dev = [
 "prek>=0.2.22",
 "pytest~=8.4.2",
 "ty>=0.0.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = { safe_exec = ["py.typed"] }

[tool.setuptools.dynamic]
version = { attr = "safe_exec.__version__" }

[tool.ruff]
src = ["src"]
exclude = ["tests/scripts/**"]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "T20", "S101", "S102", "S307"]
