[project]
name = "safe-exec"
version = "0.0.4"
description = "Deobfuscate and inspect code passed into exec() and eval()"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "Lemonyte", email = "contact@lemonyte.com" }]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/lemonyte/safe-exec"

[project.scripts]
safe-exec = "safe_exec.__main__:main"

[dependency-groups]
dev = [
 "prek~=0.2.22",
 "pytest~=8.4.2",
 "ty~=0.0.2",
]

[build-system]
requires = ["uv_build>=0.9.23"]
build-backend = "uv_build"

[tool.ruff]
src = ["src"]
exclude = ["tests/scripts/**"]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "T20", "S101", "S102", "S307"]
